static/css/index.css
/* = latest announcements = */

div.latest-announcements {
  margin-top: 15px;
  background: #3D2020;
  border-left: 7px solid #F18D8D;
  border-radius: 10px;
  width: 80%;
}

div.latest-announcements h2 {
  font-size: 1.5em;
  font-weight: bold;
  color: #F18D8D;
  text-align: center;
  margin-bottom: 33px;
}

div.latest-announcements li {
  color: #fff;
  margin-bottom: 5px;
}

@media screen and (max-width: 750px) {
  div.latest-announcements {
    width: 95%;
  }
}


/* = innovating = */

div.innovating {
  display: flex;
  flex-direction: column;
  align-items: center;
  
  width: 80%;
  margin-top: 60px;
}

div.innovating p {
  text-align: center;
  margin-bottom: 0;
}

h1.year {
  margin: -10px;
  font-size: 6em;
  font-weight: 700;
  color: #F34C4C;
}


/* = our projects = */

div.category {
  display: flex;
  flex-direction: column;
  align-items: center;
  
  width: 80%;
  margin-top: 100px;
}

div.projects h1 {
  margin: -10px;
  font-size: 2.6em;
  font-weight: 700;
  color: #F34C4C;
  margin-bottom: 10px;
}

div.project-cards {
  display: flex;
  justify-content: space-between;
}

div.project-card {
  display: flex;
  flex-direction: column;
  align-items: center;

  width: 100%;
  margin-left: 5px;
  margin-right: 5px;
  margin-top: 30px;
  background: #000000;
  border-radius: 10px;
}

div.project-card .image {
  max-width: 100%;
  height: 100%;
}

div.project-card img,
div.project-card div {
  min-width: 100%;
  aspect-ratio: 100 / 47;

  border-radius: 10px 10px 0px 0px;
  background: #807070;
}
div.image-missing {
  display: flex;
  justify-content: center;
  align-items: center;
}

div.project-card h3 {
  margin: 15px;
  font-size: 1.3em;
  font-weight: 700;
  color: #F34C4C;
}

div.project-card p {
  margin-top: 0;
  font-size: 13px;
  width: 93%;
  height: 100%;
}

div.project-card button {
  width: 157px;
  height: 31px;
  border: none;
  border-radius: 5px;
  color: #fff;
  background: #750606;
  margin-bottom: 10px;
  cursor: pointer;
}

@media screen and (max-width: 720px) {
  .project-cards {
    flex-direction: column;
  }
}


/* = connect with us = */

div.contact h1 {
  margin: -10px;
  font-size: 2.6em;
}
span.red {
  color: #F34C4C;
}

div.contact p {
  text-align: center;
  margin-bottom: 0;
}

div.contact a {
  color: #F34C4C;
  text-decoration: none;
  margin-top: 4px;
  display: flex;
  flex-direction: row;
}

div.contact a svg {
  height: 20px;
  width: 20px;
  fill: #F34C4C
}


/* = follow our journey = */

div.follow-us h1 {
  margin: -10px;
  font-size: 2.6em;
}

.socials {
  display: flex;
  margin-top: 15px;
}

.circle {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background: #000000;
  margin-right: 5px;
  margin-left: 5px;

  display: flex;
  align-items: center;
  justify-content: center;
}

.circle svg {
  width: 60%;
  height: 60%;
  fill: #DCD3D3;
}

